syntax = "proto3";
package antidote.api.exp;
option go_package = ".;antidote_api_exp";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
service LiveLessonsService {

  rpc HealthCheck(google.protobuf.Empty) returns (LBHealthCheckResponse) {
    option (google.api.http) = {
      get: "/*"
    };
  }

  // Request a lab is created, or request the UUID of one that already exists for these parameters.
  rpc RequestLiveLesson(LiveLessonRequest) returns (LiveLessonId) {
    option (google.api.http) = {
      post: "/exp/livelesson"
      body: "*"
    };
  }

  // Retrieve details about a lesson
  rpc GetLiveLesson(LiveLessonId) returns (LiveLesson) {
    option (google.api.http) = {
      get: "/exp/livelesson/{id}"
    };
  }

  // THESE ARE SENSITIVE - do not expose via REST
  rpc ListLiveLessons(google.protobuf.Empty) returns (LiveLessons) {}
  rpc KillLiveLesson(LiveLessonId) returns (KillLiveLessonStatus) {}
  rpc CreateLiveLesson(LiveLesson) returns (google.protobuf.Empty) {}

}

message LBHealthCheckResponse {}

message Session {
  string id = 1;
}

// enum Status {
//   DONOTUSE = 0;   // Protobuf doesn't encode the default value. Throwing this one away.
//   INITIAL_BOOT = 1;
//   CONFIGURATION = 2;
//   READY = 3;
// }

message LiveEndpoint {
  string Name = 1;
  string Image = 2;
  repeated int32 Ports = 4;
  repeated LivePresentation LivePresentations = 5;
  string Host = 6;

  string SSHUser = 7;
  string SSHPassword = 8;
}

message LivePresentation {
  string Name = 1;
  int32 Port = 2;
  string Type = 3;
  string HepDomain = 4;
}


message LiveLesson {
  string ID = 1;
  string SessionID = 2;
  string AntidoteID = 3;
  string LessonSlug = 4;

  map <string, LiveEndpoint> LiveEndpoints  = 5;

  int32 CurrentStage = 6;
  string GuideContents = 7;
  string GuideType = 8;
  string GuideDomain = 9;

  string Status = 10;

  bool Error = 11;
  int32 HealthyTests = 12;
  int32 TotalTests = 13;

  string Diagram = 14;
  string Video = 15;
  string StageVideo = 16;
}

message LiveLessons {
  map<string, LiveLesson> LiveLessons = 1;
}

message LiveLessonRequest {
  string lessonSlug = 1;
  string sessionId = 2;
  int32 lessonStage = 3;
}

message LiveLessonId {
  string id = 1;
}

message KillLiveLessonStatus {
  bool success = 1;
}
